fixed spacing issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -662,7 +662,7 @@ header {
 
   &__list li {
     @include task-item();
-    padding: 0;
+    // padding: 0;
 
     div:nth-child(1) {
       padding: 10px;
@@ -693,7 +693,7 @@ header {
 
   &__list li {
     @include task-item();
-    padding: 0;
+    // padding: 0;
 
     div:nth-child(1) {
       width: 100%;
